# studroc_paper

./: .gitignore  AGENTS.md  README.md  notebook_analysis.py  pyproject.toml
data/results/: beta_opposing_n10000_prev50_20260103_aggregated.json  beta_opposing_n10000_prev50_20260103_individual.feather  beta_opposing_n10000_prev50_20260124_aggregated.json  beta_opposing_n10000_prev50_20260124_individual.feather  beta_opposing_n1000_prev10_20260103_aggregated.json  beta_opposing_n1000_prev10_20260103_individual.feather  beta_opposing_n1000_prev10_20260124_aggregated.json  beta_opposing_n1000_prev10_20260124_individual.feather  beta_opposing_n1000_prev1_20260103_aggregated.json  beta_opposing_n1000_prev1_20260103_individual.feather  beta_opposing_n1000_prev50_20260103_aggregated.json  beta_opposing_n1000_prev50_20260103_individual.feather  beta_opposing_n1000_prev50_20260124_aggregated.json  beta_opposing_n1000_prev50_20260124_individual.feather  beta_opposing_n100_prev50_20260103_aggregated.json  beta_opposing_n100_prev50_20260103_individual.feather  beta_opposing_n100_prev50_20260124_aggregated.json  beta_opposing_n100_prev50_20260124_individual.feather  beta_opposing_n10_prev50_20260103_aggregated.json  beta_opposing_n10_prev50_20260103_individual.feather  (+174 more)
scripts/: run_simulation.py  validate_wilson_update.py
stats/: method_recommendation_analysis.py  method_recommendation_report.md  nonparam_envelope.md  optim_K_B.md  paper_figures.py  project_evaluation_report.md  simulation_spec.md  theoretical_behavior_report.md
tests/: test_roc_to_dgp.py  test_true_rocs.py
(+139 files in other folders)
